--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,100,0,0"
+    />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>Rundwn.</title>
   </head>
